# SP-RBDOOM-3-BFG

./: .gitignore  .gitmodules  LearnNotes.txt  Notes.txt  README.txt  docsforge.yaml
backup/: makkon1.mtr  squidman.def  weapon_rocketlauncher.def  weapon_shotgun.def  weapon_unarmed.def
backup/rg1/: area0_envprobe_1376_256_512_amb.exr  area0_envprobe_1376_256_512_spec.exr  area1_envprobe_1280__2304_256_amb.exr  area1_envprobe_1280__2304_256_spec.exr  area1_lightgrid_amb.exr
base/: default.cfg
base/af/: char_zombie.af
base/def/: ammo.def  engine.def  environment_probe.def  func.def  items.def  level1.def  makkon0.def  mannequin.def  misc.def  monster_zombie.def  moveables.def  player.def  portal.def  squidman.def  toilet_paper.def  weapon_arm2.def  weapon_flashlight.def  weapon_pda.def  weapon_rocketlauncher.def  weapon_shotgun.def  weapon_tazer.def  weapon_unarmed.def
base/guis/: camera.gui  cursor.gui  hud.gui  mainmenu.gui  mpmain.gui  msg.gui  pausemenu.gui  switchPortal.gui  test.gui
base/materials/: Box.mtr  aperature.mtr  base_wall.mtr  camera.mtr  character.mtr  common.mtr  computer.mtr  decals.mtr  door.mtr  engine.mtr  env.mtr  floor.mtr  gfx.mtr  gui.mtr  items.mtr  lights.mtr  mainmenu.mtr  makkon0.mtr  makkon1.mtr  makkon2.mtr  particles.mtr  pbrTest.mtr  portal.mtr  props.mtr  rotate.mtr  sfx.mtr  shaderDemos.mtr  skies.mtr  stephenTest.mtr  toilet_paper.mtr  walls.mtr  weapons.mtr
base/particles/: bulletricochet.prt  explosions.prt  shotgunmuzzlesmoke.prt  tazer_impact.prt  test.prt  weapons.prt
base/renderprogs/: ambient_lighting.ps.hlsl  ambient_lighting_IBL.ps.hlsl  global.inc.hlsl  (+6 more)
docs/: ClassDiagram.mmd  Entity.md  Style.md
neo/: .clang-format  CMakeLists.txt  CMakeSettings.json  astyle-code.bat  astyle3.1-code.sh  astyle3.1-options.ini  clang-format-code.sh  cmake-vs2019-32bit-windows10.bat  cmake-vs2022-64bit-windows10-vulkan.bat  cmake-vs2022-64bit-windows10.bat  cmake-vs2022-64bit.bat  cmake-xcode-nvrhi-debug.sh  compileshaders.cmake
neo/libs/lua-5.4.1/: CMakeLists.txt
photoshop/: legal_english.psd  light_falloff.psd  userinterface_skin.psd
(+694 files in other folders)
